fix input placeholder visibility in firefox

--- a/app/src/components/TodoItem/TodoItem.module.scss
+++ b/app/src/components/TodoItem/TodoItem.module.scss
@@ -65,10 +65,12 @@
   }
   &::placeholder {
     visibility: hidden;
+    opacity: 0;
     color: #bfbfbf;
   }
   &:focus::placeholder {
     visibility: visible;
+    opacity: 1;
   }
 }
 
